[tool.poetry]
name = "chatrwkv"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.0"
rwkv = {path = "rwkv_pip_package"}
prompt-toolkit = "^3.0.38"
ninja = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
