[tool.poetry]
name = "rwkv"
version = "0.7.2"
authors = ["Bo PENG"]
description = "The RWKV Language Model"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BlinkDL/ChatRWKV"
"Bug Tracker" = "https://github.com/BlinkDL/ChatRWKV/issues"

[tool.poetry.dependencies]
python = ">=3.8.0"
torch = "^2.0.0"
numpy = "^1.24.2"
tiktoken = "^0.3.3"
tokenizers = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
